--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-motion": "^0.5.2",
+    "react-scripts": "1.1.4",
+    "react-waypoint": "^8.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
