--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "csv-loader": "^3.0.2",
+    "csv-reader": "^1.0.3",
     "eslint-config-google": "^0.9.1"
   }
 }
