--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-scrollable-anchor": "^0.6.1",
-    "react-waypoint": "^8.0.2"
+    "react-waypoint": "^8.0.2",
+    "readline-sync": "^1.4.9"
   },
   "scripts": {
     "start": "react-scripts start",
