--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-localization": "^1.0.10",
+    "react-media": "^1.8.0",
     "react-motion": "^0.5.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
