--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-scrollable-anchor": "^0.6.1",
+    "react-slick": "^0.23.1",
     "react-waypoint": "^8.0.2",
-    "readline-sync": "^1.4.9"
+    "readline-sync": "^1.4.9",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
